# agentcore-samples

./: CONTRIBUTORS.md
01-tutorials/02-AgentCore-gateway/04-integration/05-entraid-3lo-gateway/openapi/: weather-api.json
01-tutorials/02-AgentCore-gateway/16-vpc-egress/: .gitignore  README.md  cdk.json  package-lock.json  package.json  requirements.txt
01-tutorials/02-AgentCore-gateway/16-vpc-egress/00-prerequisites/: 00-vpc-gateway-setup.ipynb  README.md  create-acm-public-certificate.md  create-private-hosted-zone.md  create-public-dns-record.md  private-certificate-private-domain.md  private-certificate-public-domain.md  public-certificate-private-domain.md  public-certificate-public-domain.md
01-tutorials/02-AgentCore-gateway/16-vpc-egress/01-managed-lattice/: 01-getting-started.ipynb  README.md
01-tutorials/02-AgentCore-gateway/16-vpc-egress/02-self-managed-lattice/: 01-getting-started.ipynb  README.md  openapi-private-apigw.json
01-tutorials/02-AgentCore-gateway/16-vpc-egress/03-advanced-concepts/: 01-private-domain.ipynb  README.md
01-tutorials/02-AgentCore-gateway/16-vpc-egress/docker/fastmcp-mock/: requirements.txt  server.py
01-tutorials/02-AgentCore-gateway/16-vpc-egress/docker/simple-api/: app.py  openapi.json  requirements.txt
01-tutorials/02-AgentCore-gateway/16-vpc-egress/lib/: private-cert-backend-stack.ts  private-domain-stack.ts  public-cert-proxy-stack.ts  test1-mcp-ecs-stack.ts  test2-mcp-eks-stack.ts  test3-api-eks-stack.ts  test4-private-apigw-stack.ts  test5-private-api-public-cert-stack.ts  test6-public-dns-private-cert-stack.ts  test7-private-dns-private-cert-stack.ts  vpcegress-stack.ts
01-tutorials/02-AgentCore-gateway/16-vpc-egress/lib/shared/: agentcore-gateway-stack.ts  eks-cluster-stack.ts  private-ca-stack.ts  short-lived-ca-stack.ts
01-tutorials/02-AgentCore-gateway/16-vpc-egress/utils/: utils.py
01-tutorials/09-AgentCore-E2E/strands-agents/: lab-03-agentcore-gateway.ipynb
01-tutorials/10-Agent-Registry/01-advanced/consumer-discovery-semantic-search/: consumer-discovery-semantic-search.ipynb
02-use-cases/: README.md
02-use-cases/auth0-multi-agent-obo/: .env.example  .gitignore  .gitleaksignore  LICENSE  README.md  cleanup_all.sh  debug.sh  deploy_all.sh  pyproject.toml  requirements.txt
02-use-cases/auth0-multi-agent-obo/agents/accounts/: Dockerfile  __init__.py  agent.py  auth_validator.py  main.py  requirements.txt
02-use-cases/auth0-multi-agent-obo/agents/accounts/tools/: __init__.py  account_tools.py
02-use-cases/auth0-multi-agent-obo/agents/coordinator/: Dockerfile  QUICKSTART.md  README.md  __init__.py  agent.py  auth_context.py  main.py  requirements.txt  subagent_router.py
02-use-cases/auth0-multi-agent-obo/agents/coordinator/tools/: __init__.py  profile_tools.py  routing_tools.py
02-use-cases/auth0-multi-agent-obo/agents/customer_profile/: .dockerignore  Dockerfile  __init__.py  agent.py  auth_validator.py  main.py  profile_service.py  requirements.txt
02-use-cases/auth0-multi-agent-obo/agents/customer_profile/tools/: __init__.py  get_profile.py  update_phone.py
02-use-cases/auth0-multi-agent-obo/client/streamlit_app/: .env.example  ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  agent_trace.py  agentcore_client.py  app.py  auth0_handler.py  logging_config.py  oauth2_callback.py  pkce_store.py  requirements.txt  run.sh  session_manager.py
02-use-cases/auth0-multi-agent-obo/client/streamlit_app/components/: __init__.py  api_call_log.py  chat.py  jwt_viewer.py  login.py  sidebar.py  state_viewer.py
02-use-cases/auth0-multi-agent-obo/docs/: README.md  api_reference.md  architecture.md  auth0_configuration.md  rfc8693_token_exchange.md  setup.md
02-use-cases/auth0-multi-agent-obo/docs/diagrams/: 01-high-level-architecture.drawio  02-oauth-pkce-flow.drawio  03-agent-communication-flow.drawio  04-jwt-validation-process.drawio  05-authorization-layers.drawio  06-security-architecture.drawio  07-streamlit-application-architecture.drawio
02-use-cases/auth0-multi-agent-obo/infrastructure/auth0/: README.md
02-use-cases/auth0-multi-agent-obo/infrastructure/auth0/actions/: post_login_action.js
02-use-cases/auth0-multi-agent-obo/infrastructure/auth0/rules/: add_custom_claims.js
02-use-cases/auth0-multi-agent-obo/infrastructure/cdk/: README.md  __init__.py  agentcore_identity_stack.py  agentcore_runtime_stack.py  app.py  cdk.json  requirements.txt
02-use-cases/auth0-multi-agent-obo/shared/: __init__.py
02-use-cases/auth0-multi-agent-obo/shared/auth/: __init__.py  claims_extractor.py  token_exchange.py  token_forwarder.py
02-use-cases/auth0-multi-agent-obo/shared/config/: __init__.py  secrets_provider.py  settings.py
02-use-cases/auth0-multi-agent-obo/shared/http/: __init__.py  agent_http_client.py
02-use-cases/auth0-multi-agent-obo/shared/models/: __init__.py  profile.py  requests.py  user_context.py
02-use-cases/auth0-multi-agent-obo/tests/: __init__.py  conftest.py
02-use-cases/auth0-multi-agent-obo/tests/unit/: __init__.py  test_auth_validator.py  test_claims_extractor.py  test_profile_model.py  test_profile_service.py  test_secrets_provider.py  test_token_exchange.py  test_token_forwarding.py  test_user_context.py
02-use-cases/auth0-multi-agent-obo/tests/unit/agents/: __init__.py  test_accounts_agent.py  test_accounts_auth_validator.py  test_coordinator_agent.py  test_coordinator_main.py  test_customer_profile_agent.py  test_profile_auth_validator.py  test_profile_main.py
